libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__access_methods_and_properties_on_collections.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    let x = [1,2,3];\n    let y = [\"hello\"];\n\n    test \"test\" {\n      assert(x.length == 3);\n      assert(y.at(0) == \"hello\");\n    }\n    \"#)"
---
======================================================
Files:

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({ $_y_at_0__, $x_length }) {
  class $Closure1 {
    async handle()  {
      {((cond) => {if (!cond) throw new Error("assertion failed: x.length == 3")})(($x_length === 3))};
      {((cond) => {if (!cond) throw new Error("assertion failed: y.at(0) == \"hello\"")})(($_y_at_0__ === "hello"))};
    }
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
  }
  return $Closure1;
}

preflight.js
------------------------------------------------------
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({ 
        $_y_at_0__: ${context._lift((y.at(0)))},
        $x_length: ${context._lift(x.length)},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("handle")) {
      $Closure1._registerBindObject((y.at(0)), host, []);
      $Closure1._registerBindObject(x.length, host, []);
    }
    super._registerBind(host, ops);
  }
}
const x = Object.freeze([1, 2, 3]);
const y = Object.freeze(["hello"]);
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

