libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__access_property_on_primitive.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    let s = \"hello\";\n\n    test \"test\" {\n      assert(s.length == 5);\n    }\n    \"#)"
---
======================================================
Captured by $Closure1:
Variables:
  handle():
    s => []

======================================================
Files:

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({ s }) {
  class $Closure1 {
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
    async handle()  {
      {((cond) => {if (!cond) throw new Error(`assertion failed: '(s.length === 5)'`)})((s.length === 5))};
    }
    async $inflight_init()  {
    }
  }
  return $Closure1;
}

main.w
------------------------------------------------------

    let s = "hello";

    test "test" {
      assert(s.length == 5);
    }
    
preflight.js
------------------------------------------------------
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle", "$inflight_init");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({
        s: ${context._lift(s, [])},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({ });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("handle")) {
      $Closure1._registerBindObject(s, host, []);
    }
    super._registerBind(host, ops);
  }
}
const s = "hello";
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

