libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__capture_identifier_from_preflight_scope.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    let x = \"hello\";\n    test \"test\" {\n      log(x);\n    }\n    \"#)"
---
======================================================
Captured by $Closure1:

======================================================
Files:

main.w
------------------------------------------------------

    let x = "hello";
    test "test" {
      log(x);
    }
    
preflight.js
------------------------------------------------------
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    const $x = context._lift(x);
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({ 
        $x: ${$x},
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
  _registerBind(host, ops) {
    if (ops.includes("handle")) {
      $Closure1._registerBindObject(x, host, []);
    }
    super._registerBind(host, ops);
  }
}
const x = "hello";
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({ $x }) {
  class $Closure1 {
    async $inflight_init()  {
    }
    async handle()  {
      {console.log($x)};
    }
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
  }
  return $Closure1;
}

