libs/wingc/src/jsify/captures/snapshots/wingc__jsify__captures__tests__capture_type_inflight_class_sibling_from_init.snap
---
source: libs/wingc/src/jsify/captures/tests.rs
expression: "capture_ok(r#\"\n    test \"test\" {\n      class Foo { }\n      class Bar {\n        init() {\n          new Foo();\n        }\n      }\n    }\n    \"#)"
---
======================================================
Files:

inflight.$Closure1.js
------------------------------------------------------
module.exports = function({  }) {
  class $Closure1 {
    async handle()  {
      const Foo = require("./inflight.Foo.js")({});
      const Bar = require("./inflight.Bar.js")({Foo});
    }
    constructor({  }) {
      const $obj = (...args) => this.handle(...args);
      Object.setPrototypeOf($obj, this);
      return $obj;
    }
  }
  return $Closure1;
}

inflight.Bar.js
------------------------------------------------------
module.exports = function({ $Foo, Foo }) {
  class Bar {
    constructor()  {
      new $Foo();
    }
  }
  return Bar;
}

inflight.Foo.js
------------------------------------------------------
module.exports = function({  }) {
  class Foo {
  }
  return Foo;
}

preflight.js
------------------------------------------------------
class $Closure1 extends $stdlib.std.Resource {
  constructor(scope, id, ) {
    super(scope, id);
    this._addInflightOps("handle");
    this.display.hidden = true;
  }
  static _toInflightType(context) {
    return $stdlib.core.NodeJsCode.fromInline(`
      require("./inflight.$Closure1.js")({ 
      })
    `);
  }
  _toInflight() {
    return $stdlib.core.NodeJsCode.fromInline(`
      (await (async () => {
        const client = new (${$Closure1._toInflightType(this).text})({
        });
        if (client.$inflight_init) { await client.$inflight_init(); }
        return client;
      })())
    `);
  }
}
this.node.root.new("@winglang/sdk.std.Test",std.Test,this,"test:test",new $Closure1(this,"$Closure1"));

